<resources>
    <string name="app_name">Game of Life</string>
    <string name="main_title">Game of Life</string>
    <string name="main_editor_button">DRAW</string>
    <string name="main_import_button">IMPORT</string>
    <string name="main_gallery_button">GALLERY</string>
    <string name="main_editor_settings_width_hint">width</string>
    <string name="main_editor_settings_height_hint">height</string>
    <string name="main_editor_go">GO!</string>

    <string name="editor_title">Creating <b>%1$d</b>px * <b>%2$d</b>px image</string>
    <string name="editor_clear_contentDescription">Clear canvas</string>
    <string name="editor_switch_color_contentDescription">Switch color</string>
    <string name="editor_save_image_contentDescription">Save image</string>
    <string name="editor_send_image_contentDescription">Send initial state image to server</string>

    <string name="viewer_title"><![CDATA[Displaying image <b>%1$s</b> (<b>%2$s</b>)]]></string>
    <string name="viewer_send_image_contentDescription">Send image to processing server</string>
    <string name="viewer_save_image_contentDescription">Save image</string>
    <string name="viewer_delete_image_contentDescription">Delete image</string>
    <string name="viewer_play_animated_image_contentDescription">Play gif</string>
    <string name="viewer_pause_animated_image_contentDescription">Pause gif</string>

    <string name="gallery_title"><![CDATA[Gallery <b>%1$d</b> images]]></string>
</resources>
