<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewerActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/viewer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/viewer_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorAccent"
            android:clickable="false">

            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/viewer_displayview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/viewer_delete_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/viewer_delete_image_contentDescription"
            android:onClick="deleteImages"
            android:scaleType="fitCenter"
            android:tint="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            tools:srcCompat="@android:drawable/ic_menu_delete" />

        <ImageButton
            android:id="@+id/viewer_save_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/viewer_save_image_contentDescription"
            android:onClick="moveFilesToInternalStorage"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_save"
            tools:srcCompat="@drawable/ic_save" />

        <ImageButton
            android:id="@+id/viewer_play_animated_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/viewer_play_animated_image_contentDescription"
            android:onClick="onPlayButton"
            android:scaleType="fitCenter"
            android:tint="@color/colorPrimary"
            app:srcCompat="@android:drawable/ic_media_play"
            tools:srcCompat="@android:drawable/ic_media_play" />

        <ImageButton
            android:id="@+id/viewer_send_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/viewer_send_image_contentDescription"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:onClick="sendImage"
            app:srcCompat="@drawable/ic_send_arrow"
            tools:srcCompat="@drawable/ic_send_arrow" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

