<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.burn38.golapp.EditorActivity">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/editor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:text="@string/editor_title"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorAccent"
            android:clickable="false">

            <fr.burn38.golapp.views.PaintView
                android:id="@+id/editor_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#FF0000"
                android:visibility="visible" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/editor_clear_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/editor_clear_contentDescription"
            android:onClick="clearImage"
            app:srcCompat="@android:drawable/ic_delete"
            tools:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/editor_switch_color_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/editor_switch_color_contentDescription"
            android:onClick="switchColor"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_switch_color_black"
            tools:src="@drawable/ic_switch_color_black"
            tools:srcCompat="@drawable/ic_switch_color_black" />

        <ImageButton
            android:id="@+id/editor_save_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/editor_save_image_contentDescription"
            android:onClick="saveImage"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_save"
            tools:src="@drawable/ic_save"
            tools:srcCompat="@drawable/ic_save" />

        <ImageButton
            android:id="@+id/editor_send_image_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/editor_send_image_contentDescription"
            android:onClick="sendImage"
            android:padding="12dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_send_arrow"
            tools:src="@drawable/ic_send_arrow"
            tools:srcCompat="@drawable/ic_send_arrow" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>